// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlyoutService FlyoutRef#close() can be called multiple times on the same FlyoutRef 1`] = `
Array [
  Array [
    <div />,
  ],
]
`;

exports[`FlyoutService openFlyout() renders a flyout to the DOM 1`] = `
Array [
  Array [
    <KibanaRenderContextProvider
      analytics={
        Object {
          "optIn": [MockFunction],
          "reportEvent": [MockFunction],
          "telemetryCounter$": Subject {
            "closed": false,
            "currentObservers": null,
            "hasError": false,
            "isStopped": false,
            "observers": Array [],
            "thrownError": null,
          },
        }
      }
      i18n={
        Object {
          "Context": [MockFunction],
        }
      }
      theme={
        Object {
          "getTheme": [MockFunction],
          "theme$": Observable {
            "_subscribe": [Function],
          },
        }
      }
      userProfile={
        Object {
          "bulkGet": [MockFunction],
          "getCurrent": [MockFunction],
          "getUserProfile$": [MockFunction],
          "partialUpdate": [MockFunction],
          "suggest": [MockFunction],
          "update": [MockFunction],
        }
      }
    >
      <EuiFlyout
        onClose={[Function]}
      >
        <MountWrapper
          className="kbnOverlayMountWrapper"
          mount={[Function]}
        />
      </EuiFlyout>
    </KibanaRenderContextProvider>,
    <div />,
  ],
]
`;

exports[`FlyoutService openFlyout() renders a flyout to the DOM 2`] = `"<div data-eui=\\"EuiFlyout\\" role=\\"dialog\\"><button type=\\"button\\" data-test-subj=\\"euiFlyoutCloseButton\\" aria-label=\\"Close this dialog\\"></button><div class=\\"kbnOverlayMountWrapper\\"><span>Flyout content</span></div></div>"`;

exports[`FlyoutService openFlyout() with a currently active flyout replaces the current flyout with a new one 1`] = `
Array [
  Array [
    <KibanaRenderContextProvider
      analytics={
        Object {
          "optIn": [MockFunction],
          "reportEvent": [MockFunction],
          "telemetryCounter$": Subject {
            "closed": false,
            "currentObservers": null,
            "hasError": false,
            "isStopped": false,
            "observers": Array [],
            "thrownError": null,
          },
        }
      }
      i18n={
        Object {
          "Context": [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "children": <KibanaErrorBoundaryProvider
                    analytics={
                      Object {
                        "optIn": [MockFunction],
                        "reportEvent": [MockFunction],
                        "telemetryCounter$": Subject {
                          "closed": false,
                          "currentObservers": null,
                          "hasError": false,
                          "isStopped": false,
                          "observers": Array [],
                          "thrownError": null,
                        },
                      }
                    }
                  >
                    <KibanaErrorBoundary>
                      <EuiFlyout
                        onClose={[Function]}
                      >
                        <MountWrapper
                          className="kbnOverlayMountWrapper"
                          mount={[Function]}
                        />
                      </EuiFlyout>
                    </KibanaErrorBoundary>
                  </KibanaErrorBoundaryProvider>,
                },
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": <I18nProvider>
                  <KibanaErrorBoundaryProvider
                    analytics={
                      Object {
                        "optIn": [MockFunction],
                        "reportEvent": [MockFunction],
                        "telemetryCounter$": Subject {
                          "closed": false,
                          "currentObservers": null,
                          "hasError": false,
                          "isStopped": false,
                          "observers": Array [],
                          "thrownError": null,
                        },
                      }
                    }
                  >
                    <KibanaErrorBoundary>
                      <EuiFlyout
                        onClose={[Function]}
                      >
                        <MountWrapper
                          className="kbnOverlayMountWrapper"
                          mount={[Function]}
                        />
                      </EuiFlyout>
                    </KibanaErrorBoundary>
                  </KibanaErrorBoundaryProvider>
                </I18nProvider>,
              },
            ],
          },
        }
      }
      theme={
        Object {
          "getTheme": [MockFunction],
          "theme$": Observable {
            "_subscribe": [Function],
          },
        }
      }
      userProfile={
        Object {
          "bulkGet": [MockFunction],
          "getCurrent": [MockFunction],
          "getUserProfile$": [MockFunction],
          "partialUpdate": [MockFunction],
          "suggest": [MockFunction],
          "update": [MockFunction],
        }
      }
    >
      <EuiFlyout
        onClose={[Function]}
      >
        <MountWrapper
          className="kbnOverlayMountWrapper"
          mount={[Function]}
        />
      </EuiFlyout>
    </KibanaRenderContextProvider>,
    <div />,
  ],
  Array [
    <KibanaRenderContextProvider
      analytics={
        Object {
          "optIn": [MockFunction],
          "reportEvent": [MockFunction],
          "telemetryCounter$": Subject {
            "closed": false,
            "currentObservers": null,
            "hasError": false,
            "isStopped": false,
            "observers": Array [],
            "thrownError": null,
          },
        }
      }
      i18n={
        Object {
          "Context": [MockFunction] {
            "calls": Array [
              Array [
                Object {
                  "children": <KibanaErrorBoundaryProvider
                    analytics={
                      Object {
                        "optIn": [MockFunction],
                        "reportEvent": [MockFunction],
                        "telemetryCounter$": Subject {
                          "closed": false,
                          "currentObservers": null,
                          "hasError": false,
                          "isStopped": false,
                          "observers": Array [],
                          "thrownError": null,
                        },
                      }
                    }
                  >
                    <KibanaErrorBoundary>
                      <EuiFlyout
                        onClose={[Function]}
                      >
                        <MountWrapper
                          className="kbnOverlayMountWrapper"
                          mount={[Function]}
                        />
                      </EuiFlyout>
                    </KibanaErrorBoundary>
                  </KibanaErrorBoundaryProvider>,
                },
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": <I18nProvider>
                  <KibanaErrorBoundaryProvider
                    analytics={
                      Object {
                        "optIn": [MockFunction],
                        "reportEvent": [MockFunction],
                        "telemetryCounter$": Subject {
                          "closed": false,
                          "currentObservers": null,
                          "hasError": false,
                          "isStopped": false,
                          "observers": Array [],
                          "thrownError": null,
                        },
                      }
                    }
                  >
                    <KibanaErrorBoundary>
                      <EuiFlyout
                        onClose={[Function]}
                      >
                        <MountWrapper
                          className="kbnOverlayMountWrapper"
                          mount={[Function]}
                        />
                      </EuiFlyout>
                    </KibanaErrorBoundary>
                  </KibanaErrorBoundaryProvider>
                </I18nProvider>,
              },
            ],
          },
        }
      }
      theme={
        Object {
          "getTheme": [MockFunction],
          "theme$": Observable {
            "_subscribe": [Function],
          },
        }
      }
      userProfile={
        Object {
          "bulkGet": [MockFunction],
          "getCurrent": [MockFunction],
          "getUserProfile$": [MockFunction],
          "partialUpdate": [MockFunction],
          "suggest": [MockFunction],
          "update": [MockFunction],
        }
      }
    >
      <EuiFlyout
        onClose={[Function]}
      >
        <MountWrapper
          className="kbnOverlayMountWrapper"
          mount={[Function]}
        />
      </EuiFlyout>
    </KibanaRenderContextProvider>,
    <div />,
  ],
]
`;

exports[`FlyoutService openFlyout() with a currently active flyout replaces the current flyout with a new one 2`] = `"<div data-eui=\\"EuiFlyout\\" role=\\"dialog\\"><button type=\\"button\\" data-test-subj=\\"euiFlyoutCloseButton\\" aria-label=\\"Close this dialog\\"></button><div class=\\"kbnOverlayMountWrapper\\"><span>Flyout content 2</span></div></div>"`;
